<resources>
    <string name="app_name">YourDrawIGuess</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="please_enter_your_phone_number">请输入您的电话号码</string>
    <string name="please_enter_your_password">请输入您的密码</string>
    <string name="create_infm_account">创建账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="tip_loging">登录中…</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的手机号或邮箱地址</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="user_rule">用户协议</string>
    <string name="create_account">创建账号</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="count_down">%ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入6–32个密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="page_dot">page_dot</string>
    <string name="image_logo">logo</string>
    <string name="welcome_image">欢迎图片</string>
    <string name="click_enter">点击进入</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="username">昵称</string>
    <string name="click_create_then_agree">点击“创建账号”即同意</string>
    <string name="cancel_img">cancel_img</string>
    <string name="please_enter_your_username">请输入你的用户名</string>
    <string name="send_message">发送信息</string>
    <string name="send">发送</string>
    <string name="colon">：</string>
    <string name="now_not_have_new_mes">暂没有新消息</string>
    <string name="painter">画笔</string>
    <string name="eraser">橡</string>
    <string name="thick">粗</string>
    <string name="normal">正常</string>
    <string name="thin">细</string>
    <string name="black">黑</string>
    <string name="red">红</string>
    <string name="yellow">黄</string>

</resources>
