<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_paint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/black"/>

        <RadioButton
            android:id="@+id/rb_eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser"
            />
        <RadioButton
            android:id="@+id/rb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            />
        <RadioButton
            android:id="@+id/rb_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_thick_width"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/thick"/>

        <RadioButton
            android:id="@+id/rb_normal_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_thin_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thin">
        </RadioButton>
    </RadioGroup>

</LinearLayout>