<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8" >

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancel_normal"
        android:contentDescription="@string/cancel_img"/>


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:src="@mipmap/logo"
        android:contentDescription="@string/image_logo"/>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <me.cizezsy.yourdrawiguess.ui.widget.CleanEditText
            android:id="@+id/et_email_phone"
            style="@style/login_edit_style"
            android:hint="@string/please_enter_your_phone_number"
            android:inputType="textEmailAddress"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#f8f8f8" />

        <me.cizezsy.yourdrawiguess.ui.widget.CleanEditText
            android:id="@+id/et_password"
            style="@style/login_edit_style"
            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="#5c5c5c"
        android:textSize="16sp"
        android:layout_below="@+id/input_layout"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/create_infm_account"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />

    </RelativeLayout>
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        style="@android:style/Widget.Material.ProgressBar"
        android:visibility="gone"
        />
</RelativeLayout>